--- a/Truss/css/example-css-page.css
+++ b/Truss/css/example-css-page.css
@@ -1,5 +1,5 @@
 .container {
-    max-width: 75%;
+    max-width: 960px;
     margin: 0 auto;
 }
 
